# Mesh-Simplification-Quadric-Error

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh
dependency/glad/include/glad/: glad.h
dependency/glad/src/: glad.c
include/: shader.h  vertex.h  window.h
shaders/: fragmentShader.glsl  vertexShader.glsl
src/: main.cpp  shader.cpp  vertex.cpp  window.cpp
